# FlyLogX

./: .env.example  .gitignore  README.md  docker-compose.yml
.codex/: context.md  conventions.md  decisions.md  runtime-context.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_organization_supervisor.py  0003_add_organization_supervisors.py  0004_translate_flight_category_values.py  0005_add_user_identity_fields.py  0006_remove_flight_time_fields.py  0007_remove_aircraft_release_status.py  0008_aircraft_maintenance_cleanup.py  0009_aircraft_mnt_dates.py  0010_admin_users_global.py  0011_flight_scope_snapshots.py
backend/app/: __init__.py  db.py  domain.py  main.py  services.py
backend/app/core/: config.py  security.py
backend/tests/: conftest.py  test_smoke.py
docs/: architecture.md
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: account-dialog.tsx  admin-management.tsx  aircraft-create-dialog.tsx  aircraft-create-form.tsx  aircraft-delete-dialog.tsx  aircraft-management.tsx  app-shell.tsx  data-table.tsx  dropdown-select.tsx  export-actions.tsx  flight-delete-dialog.tsx  flight-details-dialog.tsx  flight-draft-dialog.tsx  flight-draft-form.tsx  flight-management.tsx  kpi-card.tsx  logout-button.tsx  review-queue.tsx  row-action-menu.tsx  status-pill.tsx  theme-toggle.tsx
frontend/lib/: api.ts  mock.ts  session.ts  types.ts  view-model.ts
(+7 files in other folders)
